Remove coming soon page and fix house and owner models and views

--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
     gtag('config', 'UA-118965717-4');
   </script>
 </head>
-<body class="app">
+<body class="app footer-fixed">
   <!-- App Loading... -->
 </body>
 </html>
