--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,7 @@
 	<title>CoreUI - Free Angular Admin Template</title>
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-118965717-3"></script>
+  <script src="https://kit.fontawesome.com/1ecd87a9f6.js" crossorigin="anonymous"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
